@@ -117,8 +117,8 @@ int be_visitor_array_cs::visit_array (be_array *node)
       << fname << "_alloc ();" << be_uidt_nl << be_nl;
   *os << "if (!_tao_dup_array)" << be_idt_nl
       << "{" << be_idt_nl
-      << "return (" << fname
-      << "_slice *)0;" << be_uidt_nl
+      << "return static_cast <" << fname
+      << "_slice *> (0);" << be_uidt_nl
       << "}" << be_uidt_nl << be_nl;
   *os << fname << "_copy (_tao_dup_array, _tao_src_array);" << be_nl;
   *os << "return _tao_dup_array;" << be_uidt_nl;
